--- a/estilo.css
+++ b/estilo.css
@@ -1,9 +1,16 @@
 /* EXERCÍCIO 1: fontes */
 /* importá-las aqui... e definir as `font-family` da turminha... */
-
+@import url("fonts/ravie.css");
+@import url("fonts/verdana.css");
 
 body {
   background-color: #fff;
+  font-family: "Verdana";
+  margin: 0;
+}
+
+h1{
+  font-family: "Ravie";
 }
 
 strong {
@@ -37,34 +44,39 @@ strong {
 
 /* EXERCÍCIO 2: layout da página */
 #recipiente {
-  /* layout da página aqui */
-  /* ... */
-  /* ... */
-  /* ... */
-  /* ... */
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  min-height: 100vh;
 }
 
 #cabecalho-pagina {
-
+  grid-row: 1 / 3;
+  grid-column: 2 / 2;
+  position: sticky;
 }
 
 #lateral {
-
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+  width: 10%;
 }
 
 #cardapio {
-
+  grid-row: 2 / 3;
+  grid-column: 2 / 2;
 }
 
 #rodape-pagina {
-
+  grid-row: 3 / 3;
+  grid-column: 2 / 2;
 }
 
 
 
 /* EXERCÍCIO 3: cabeçalho da página */
 #cabecalho-pagina {
-
+  
 }
 
 #cabecalho-pagina h1 {
